--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
